--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  pointycastle: ^3.9.1
 
 dev_dependencies:
   lints: ^5.0.0
+  hex: ^0.2.0
   test: ^1.24.0
