--- a/.github/workflows/health.yaml
+++ b/.github/workflows/health.yaml
@@ -14,3 +14,10 @@ jobs:
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
       - run: dart test
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dart-lang/setup-dart@v1
+      - run: dart format lib -o none --set-exit-if-changed
