--- a/.github/workflows/health.yaml
+++ b/.github/workflows/health.yaml
@@ -13,7 +13,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
-      - run: dart test
+      - run: dart run test/ml_dsa_test.dart
+
+  benchmark:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dart-lang/setup-dart@v1
+      - run: dart pub get
+      - run: dart compile exe test/ml_dsa_benchmark_test.dart -o benchmarks
+      - run: ./benchmarks
 
   format:
     runs-on: ubuntu-latest
