--- a/.github/workflows/health.yaml
+++ b/.github/workflows/health.yaml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
+      - run: dart --enable-experiment=native-assets run build.dart
       - run: dart --enable-experiment=native-assets run test/ml_dsa_test.dart
 
   benchmark:
@@ -21,6 +22,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
+      - run: dart --enable-experiment=native-assets run build.dart
       - run: dart --enable-experiment=native-assets compile exe test/ml_dsa_benchmark_test.dart -o benchmarks
       - run: ./benchmarks
 
