--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
-  pointycastle: ^3.9.1
+  path: ^1.9.1
+  ffi: ^2.1.3
 
 dev_dependencies:
+  ffigen: ^16.0.0
   lints: ^5.0.0
   hex: ^0.2.0
   test: ^1.24.0
