--- a/.github/workflows/health.yaml
+++ b/.github/workflows/health.yaml
@@ -32,3 +32,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
       - run: dart format lib -o none --set-exit-if-changed
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dart-lang/setup-dart@v1
+      - run: dart analyze --fatal-infos
