--- a/.github/workflows/health.yaml
+++ b/.github/workflows/health.yaml
@@ -38,4 +38,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
+      - run: dart pub get
       - run: dart analyze --fatal-infos
